--- a/week4/http101/res/values/strings.xml
+++ b/week4/http101/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="http_client">Client</string>
     <string name="ok_http">OkHttp</string>
     <string name="volley">Volley</string>
+    <string name="loading">Cargando</string>
 </resources>
