--- a/week5/gmaps101/app/src/main/res/values/strings.xml
+++ b/week5/gmaps101/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">gmaps101</string>
+    <string name="app_name">Google Maps 101</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="error_creating_map">Error al crear el mapa :(</string>
